--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,3 +2,17 @@ backend:
   name: git-gateway
 publish_mode: editorial_workflow
 media_folder: "images/uploads" # Media files will be stored in the repo under images/uploads
+collections:
+  - name: "pages"
+    label: "Pages"
+    label_singular: "Page"
+    folder: "_collections/_pages"
+    create: true
+    slug: "{{slug}}"
+    extension: html
+    fields:
+        - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
+        - {label: "Title", name: "title", widget: "string"}
+        - {label: "Description", name: "description", widget: "text", required: false}
+        - {label: "Keywords", name: "keywords", widget: "text", required: false}
+        - {label: "Body", name: "body", widget: "markdown"}
